--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^19.0.0",
