--- a/backend/package.json
+++ b/backend/package.json
@@ -49,7 +49,15 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "typeorm": "^0.3.24"
+    "typeorm": "^0.3.24",
+    "tensorflow": "^2.15.0",
+    "ml-matrix": "^6.10.4",
+    "ml-random-forest": "^2.1.0",
+    "ml-isolation-forest": "^1.0.0",
+    "@types/ml-matrix": "^6.10.4",
+    "@types/ml-random-forest": "^2.1.0",
+    "@types/ml-isolation-forest": "^1.0.0",
+    "@tensorflow/tfjs-node": "^4.17.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
