--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.6.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "langchain": "^0.3.28",
@@ -49,15 +50,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "typeorm": "^0.3.24",
-    "tensorflow": "^2.15.0",
-    "ml-matrix": "^6.10.4",
-    "ml-random-forest": "^2.1.0",
-    "ml-isolation-forest": "^1.0.0",
-    "@types/ml-matrix": "^6.10.4",
-    "@types/ml-random-forest": "^2.1.0",
-    "@types/ml-isolation-forest": "^1.0.0",
-    "@tensorflow/tfjs-node": "^4.17.0"
+    "typeorm": "^0.3.24"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
